added footer to base.html

--- a/JamminJobs/JJ_app/templates/home.html
+++ b/JamminJobs/JJ_app/templates/home.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %} {% block title %} Home Page {% endblock %}
 {% block content %}
-<div class="test">
-	<p>WhathefuckisupMOTHERFUCKER</p>
-</div>
+  <div class="home1">
+    <p>WhathefuckisupMOTHERFUCKER</p>
+  </div>
 {% endblock %}
 
