--- a/JamminJobs/JJ_app/templates/base.html
+++ b/JamminJobs/JJ_app/templates/base.html
@@ -6,32 +6,52 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bootstrap demo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="{% static 'css/main.css' %}" /> 
+    <link rel="stylesheet" href="{% static 'css/main.css' %}" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   </head>
   <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
      <div class="container-fluid">
-       <a class="navbar-brand" href="#">Job Hunter</a>
+       <a class="navbar-brand" href="#">JamminJobs</a>
        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
          <span class="navbar-toggler-icon"></span>
        </button>
        <div class="collapse navbar-collapse" id="navbarSupportedContent">
          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
            <li class="nav-item">
-             <a class="nav-link active" aria-current="page" href="#">Home</a>
+             <a class="nav-link"  href="#">Find Jobs</a>
            </li>
            <li class="nav-item">
-             <a class="nav-link" href="#">Link</a>
+             <a class="nav-link" href="#">Browse Companies</a>
            </li>
           </ul>
         </div>
      </div>
     </nav>
     <div class="container">
-    	<h1>Welcome To Job Hunter!</h1>
+    	<h1>Welcome to JamminJobs!</h1>
     	{% block content %}
     	{% endblock %}
     </div>
+    <footer>
+      <div class="footerContainer">
+        <div class="socialIcons">
+            <a href=""><i class="fa-brands fa-facebook"></i></a> 
+            <a href=""><i class="fa-brands fa-instagram"></i></a> 
+            <a href=""><i class="fa-brands fa-twitter"></i></a> 
+        </div>
+        <div class="footerNav">
+          <ul> 
+            <li><a href="">About</a></li>
+            <li><a href="">Contact Us</a></li>
+            <li><a href="">Our Team</a></li>
+          </ul>
+        </div>
+	<div class="footerBottom">
+                <p> Copyright &copy;2024; Designed by <span class="designer">Kriswhyte, CrazyKobbi, BrekiBaseballBat</p>
+	</div>
+      </div>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
