--- a/JamminJobs/JJ_app/static/css/main.css
+++ b/JamminJobs/JJ_app/static/css/main.css
@@ -1,10 +1,12 @@
 .home1{
 	background-color: green;
-	border: solid 2px rgba(155, 155, 155, .5):
+	border: solid 2px rgba(155, 155, 155, .5);
+	display: flex;
 }
 
 footer{
 	background-color: #202430;
+}
 
 .socialIcons{
 	display: flex;
