--- a/JamminJobs/JJ_app/templates/home.html
+++ b/JamminJobs/JJ_app/templates/home.html
@@ -1,7 +1,12 @@
 {% extends "base.html" %} {% block title %} Home Page {% endblock %}
+{% load static %}
+<link rel="stylesheet" href="{% static 'css/home.css' %}" />
 {% block content %}
   <div class="home1">
-    <p>WhathefuckisupMOTHERFUCKER</p>
+    <div class="item item-1">item 1</div>
+    <div class="item item-2">item 2</div>
+    <div class="item item-3">item 3</div>
+    <div class="item item-4">item 4</div>
   </div>
 {% endblock %}
 
