--- a/JamminJobs/JJ_app/templates/base.html
+++ b/JamminJobs/JJ_app/templates/base.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>JamminJobs</title>
     <link 
      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" 
      rel="stylesheet" 
@@ -53,6 +53,7 @@
     	{% block content %}
     	{% endblock %}
     </div>
+  </body>
     <footer>
       <div class="footerContainer">
         <div class="socialIcons">
@@ -73,5 +74,4 @@
       </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-  </body>
 </html>
