--- a/JamminJobs/JJ_app/static/css/main.css
+++ b/JamminJobs/JJ_app/static/css/main.css
@@ -111,24 +111,19 @@
 }
 
 .home1{
-	max-width: 90%;
-	margin-left: auto;
-	margin-right: auto;
-	border: solid 2px rgba(155, 155, 155, .5);
+	max-width: 99%;
 	display: flex;
 	align-items: flex-start;
-	gap: 32px;
+	justify-content: center;
+	flex-wrap: wrap;
 }
 
 .item{
 	display: flex;
 	height: auto;
-	padding: 24px;
+	padding: 14px;
 	flex-direction: row;
 	align-items: flex-start;
-	gap: 16px;
-	flex: 1 0 0;
-	border: solid;
 }
 
 .job-card:hover{
