added more functionality to hoem page

--- a/JamminJobs/JJ_app/templates/test.html
+++ b/JamminJobs/JJ_app/templates/test.html
@@ -6,6 +6,13 @@
         <!-- Job cards will be added here -->
     </div>
     
-    <!-- Include the script at the end of the body -->
+    <div class="home2">
+      <div class=Home_big_card1>
+      
+      </div>
+      <div class=Home_big_card>
+      
+      </div><!-- Job cards will be added here -->
+    </div>
 {% endblock %}
 
