--- a/JamminJobs/JJ_app/static/css/main.css
+++ b/JamminJobs/JJ_app/static/css/main.css
@@ -1,3 +1,26 @@
+.home2 {
+	max-width: 99%;
+	display: flex;
+	align-items: flex-start;
+	justify-content: center;
+	flex-wrap: wrap;
+	flex-direction: row;
+	padding-left: 120px;
+	padding-right: 120px;
+}
+
+.bigCard {
+	width: 580px;
+
+}
+
+
+
+
+
+
+
+
 .job-card {
 	width: auto;
 	height: auto;
