--- a/JamminJobs/templates/base.html
+++ b/JamminJobs/templates/base.html
@@ -10,7 +10,7 @@
      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" 
      crossorigin="anonymous">
     {% load static %}
-    <link rel="stylesheet" type="text/css" href='{% static '/css/main.css'%}?{% now "U" %}'>
+    <link rel="stylesheet" type="text/css" href='{% static '/css/main.css' %}?{% now "U" %}'>
     <link 
     rel="stylesheet" 
     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" 
@@ -49,7 +49,6 @@
      </div>
     </nav>
     <div class="body">
-    	<h1>Welcome to JamminJobs!</h1>
     	{% block content %}
     	{% endblock %}
    </div> 
@@ -73,6 +72,6 @@
       </div>
    </footer>
   </body>
-    <!-- <script src="{% static 'js/feat_jobs.js' %}"></script> -->
+    <script src="{% static 'js/feat_jobs.js' %}?{% now "U" %}'"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </html>
