kristo er faggi

--- a/JamminJobs/templates/home/home.html
+++ b/JamminJobs/templates/home/home.html
@@ -2,9 +2,11 @@
 {% block content %}
 	<h1>HelloWorld</h1>
 	<div>
-	  {% for job in job %}
-	  {% include ð'home/single_job_home.html' with job=job %}	
-	  {% endfor %}
+		{% for job in job %}
+			{% include 'home/single_job_home.html' with job=job %}	
+		{% endfor %}
 	</div>
 {% endblock %}
+
+
 
