--- a/JamminJobs/templates/base.html
+++ b/JamminJobs/templates/base.html
@@ -35,14 +35,14 @@
        <div class="collapse navbar-collapse" id="navbarSupportedContent">
          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
            <li class="nav-item">
-		   <a class="nav-link"  href="#">Find Jobs</a>
+		   <a class="nav-link"  href="#">Jobs</a>
            </li>
            <li class="nav-item">
-             <a class="nav-link" href="#">Browse Companies</a>
+             <a class="nav-link" href="#">Companies</a>
            </li>
           </ul> 
 	  <form class="top_buttons">
-             <button class="btn btn-outline-success me-2" type="button">Join Us</button>
+             <button class="btn btn-outline-success me-2" type="button">Company log in</button>
   	 </form>
 	 <form class="top_buttons">
 	     <button type="button" class="btn btn-success">Log In</button>
