--- a/JamminJobs/templates/base.html
+++ b/JamminJobs/templates/base.html
@@ -19,37 +19,7 @@
     referrerpolicy="no-referrer">
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-     <div class="container-fluid">
-       <a class="navbar-brand" href="#">JamminJobs</a>
-       <button 
-	class="navbar-toggler" 
-	type="button" 
-	data-bs-toggle="collapse" 
-	data-bs-target="#navbarSupportedContent" 
-	aria-controls="navbarSupportedContent" 
-	aria-expanded="false" 
-	aria-label="Toggle navigation">
-         <span class="navbar-toggler-icon"></span>
-       </button>
-       <div class="collapse navbar-collapse" id="navbarSupportedContent">
-         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-           <li class="nav-item">
-		   <a class="nav-link"  href="#">Jobs</a>
-           </li>
-           <li class="nav-item">
-             <a class="nav-link" href="#">Companies</a>
-           </li>
-          </ul> 
-	  <form class="top_buttons">
-             <button class="btn btn-outline-success me-2" type="button">Company log in</button>
-  	 </form>
-	 <form class="top_buttons">
-	     <button type="button" class="btn btn-success">Log In</button>
-  	 </form>
-        </div>
-     </div>
-    </nav>
+    {% include 'navigation.html' %}
     <div class="body">
     	{% block content %}
     	{% endblock %}
