--- a/JamminJobs/templates/login/company_log_in.html
+++ b/JamminJobs/templates/login/company_log_in.html
@@ -13,9 +13,7 @@
             <section class="login-copy">
                 <h2>Company Log In</h2>
                 <div class="login-container">
-                    <p>Don't have an account?<a href="/sign-up-company.html">
-                        <strong>Sign up</strong></a></p>
-                </div>
+                    <a href="companysignup"><strong>Sign up</strong></a>
             </section>
             <div class="input-container name">
                 <label for="email">Email</label>
