--- a/JamminJobs/templates/login/loginpage.html
+++ b/JamminJobs/templates/login/loginpage.html
@@ -13,8 +13,7 @@
             <section class="login-copy">
                 <h2>Log In</h2>
                 <div class="login-container">
-                    <p>Don't have an account?<a href="/sign-up.html">
-                        <strong>Sign up</strong></a></p>
+                    <a href="signup"><strong>Sign up</strong></a>
                 </div>
             </section>
             <div class="input-container name">
