--- a/JamminJobs/templates/home/home.html
+++ b/JamminJobs/templates/home/home.html
@@ -9,13 +9,13 @@
     </div>
 <div class="home-page-header"><span class=feat> Latest </span><span class=jobs> jobs </span></div>
     <div class="home2">
-      <div class=Home_big_card1>
-	{% for job in job %}
+      <div class="bigCard">
+	{% for job in job|slice:":4" %}
             {% include 'home/single_big_job_home.html' with job=job %}
         {% endfor %}
       </div>
-      <div class=Home_big_card>
-        {% for job in job %}
+      <div class="bigCard">
+        {% for job in job|slice:"4:" %}
             {% include 'home/single_big_job_home.html' with job=job %}
         {% endfor %}
       </div>
