--- a/JamminJobs/templates/base.html
+++ b/JamminJobs/templates/base.html
@@ -11,6 +11,7 @@
      crossorigin="anonymous">
     {% load static %}
     <link rel="stylesheet" type="text/css" href='{% static '/css/main.css' %}?{% now "U" %}'>
+    <link rel="stylesheet" type="text/css" href='{% static '/css/loginstyle.css' %}?{% now "U" %}'>
     <link 
     rel="stylesheet" 
     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" 
