WORKING VERSION WITH BUTTONS

--- a/JamminJobs/templates/login/company_sign_up.html
+++ b/JamminJobs/templates/login/company_sign_up.html
@@ -16,7 +16,7 @@
                 <div class="login-container">
                         <p>Already have an account?</p>
                         <br>
-                        <a href="/company-login.html">
+                        <a href="companylogin">
                             <button class="login-btn" type="submit">Log in</button>
                         </a>
                 </div>
