--- a/JamminJobs/templates/login/signuppage.html
+++ b/JamminJobs/templates/login/signuppage.html
@@ -15,9 +15,7 @@
                 <br>
                 <p>Already have an account?</p>
                 <br>
-                <a href="/login.html">
-                    <button class="login-btn" type="submit">Log in</button>
-                </a>
+                <a href="{% url 'login' %}" class="login-btn">Login</a>
             </section>
         </div>
         <div class="right">
