WOKRING WITH BUTTONS

--- a/JamminJobs/templates/navigation.html
+++ b/JamminJobs/templates/navigation.html
@@ -22,10 +22,10 @@
                 </li>
             </ul> 
             <form class="top_buttons">
-                <a href="{% url 'companyloginindex' %}" class="btn btn-success">Company Log in</a>
+                <a href="{% url 'companylogin' %}" class="btn btn-success">Company Log in</a>
             </form>
             <form class="top_buttons">
-                <a href="{% url 'loginindex' %}" class="btn btn-success">Log In</a>
+                <a href="{% url 'login' %}" class="btn btn-success">Log In</a>
             </form>
         </div>
     </div>
