--- a/JamminJobs/templates/jobs/job.html
+++ b/JamminJobs/templates/jobs/job.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %} 
 {% block content %}
-    <h1 class="jobs">Job collection</h1>
+    <h1 class="jobs">Job collection</h1> 
     <div class="job">
-        {% for job in jobs %}  <!-- Updated loop variable name -->
+	{% for job in jobs|slice:":10" %}
             {% include 'jobs/single_job.html' with job=job %}
         {% endfor %}
     </div>
