--- a/JamminJobs/templates/jobs/job.html
+++ b/JamminJobs/templates/jobs/job.html
@@ -1,9 +1,131 @@
 {% extends "base.html" %} 
 {% block content %}
-    <h1 class="jobs">Job collection</h1> 
-    <div class="job">
-	{% for job in jobs|slice:":10" %}
-            {% include 'jobs/single_job.html' with job=job %}
-        {% endfor %}
+<head>     
+  {% load static %}
+  <link rel="stylesheet" type="text/css" href='{% static '/css/jobs.css' %}?{% now "U" %}'>
+</head> 
+<div class="Landing-Page">
+    <div class="filter">
+        <div class="type-of-employment">
+            <h3>Type of Employment</h3>
+	    <form>
+		<label for="Full-time"> 
+		    <input type="checkbox" id="Full-time" name="Full-time"> 
+		    Full-Time 
+		</label>
+		<label for="Part-time"> 
+		    <input type="checkbox" id="Part-time" name="Part-time"> 
+		    Part-Time 
+		</label>
+		<label for="Remote"> 
+		    <input type="checkbox" id="Remote" name="Remote"> 
+		    Remote 
+		</label>
+		<label for="Internship"> 
+		    <input type="checkbox" id="Internship" name="Internship"> 
+		    Internship
+		</label>
+		<label for="Contract"> 
+		    <input type="checkbox" id="Contract" name="Contract"> 
+		    Contract 
+		</label>
+	    </form>
+	</div>
+        <div class="Categories">
+            <h4>Job Categories</h4>
+	    <form>
+		<label for="Design"> 
+		    <input type="checkbox" id="Design" name="Design"> 
+		    Desing 
+		</label>
+		<label for="Sales"> 
+		    <input type="checkbox" id="Sales" name="Sales"> 
+		    Sales 
+		</label>
+		<label for="Marketing"> 
+		    <input type="checkbox" id="Marketing" name="Marketing"> 
+		    Marketing 
+		</label>
+		<label for="Business"> 
+		    <input type="checkbox" id="Business" name="Business"> 
+		    Business 
+		</label>
+		<label for="Human-Resource"> 
+		    <input type="checkbox" id="Human-Resource" name="Human-Resource"> 
+		    Human Resource 
+		</label>
+		<label for="Finance"> 
+		    <input type="checkbox" id="Finance" name="Finance"> 
+		    Finance 
+		</label>
+		<label for="Engineering"> 
+		    <input type="checkbox" id="Engineering" name="Engineering"> 
+		    Engineering 
+		</label>
+		<label for="Technology"> 
+		    <input type="checkbox" id="Technology" name="Technology"> 
+		    Technology 
+		</label>
+	    </form>
+        </div>
+        <div class="job-level">
+            <h4>Job Level</h4>
+	    <form>
+		<label for="Entry-Level"> 
+		    <input type="checkbox" id="Entry-Level" name="Entry-Level"> 
+		     Entry Level
+		</label>
+		<label for="Mid-Level"> 
+		    <input type="checkbox" id="Mid-Level" name="Mid-Level"> 
+		     Mid Level
+		</label>
+		<label for="Senior-Level"> 
+		    <input type="checkbox" id="Senior-Level" name="Senior-Level"> 
+		     Senior Level
+		</label>
+		<label for="Director"> 
+		    <input type="checkbox" id="Director" name="Director"> 
+		    Director
+		</label>
+		<label for="VIP-or-Above"> 
+		    <input type="checkbox" id="VIP-or-Above" name="VIP-or-Above"> 
+		     VIP or Above
+		</label>
+	    </form>
+        </div>
+        <div class="salary-range">
+            <h4>Salary Range</h4>
+	    <form>
+		<label for="700-1000"> 
+		    <input type="checkbox" id="700-1000" name="700-1000"> 
+		     $700 - $1000
+		</label>
+		<label for="1000-1500"> 
+		    <input type="checkbox" id="1000-1500" name="1000-1500"> 
+		     $1000 - $1500
+		</label>
+		<label for="1500-2000"> 
+		    <input type="checkbox" id="1500-2000" name="1500-2000"> 
+		    $1500 - $2000
+		</label>
+		<label for="3000-or-Above"> 
+		    <input type="checkbox" id="3000-or-Above" name="3000-or-Above"> 
+		     $3000 or Above
+		</label>
+	    </form>
+        </div>
     </div>
+    <div class="job-list">
+	<div class="header-tag">
+	   <h2>All Jobs</h2> 
+        </div>	
+	<div class="job">
+            {% for job in jobs|slice:":7" %}
+                {% include 'jobs/single_job.html' with job=job %}
+            {% endfor %}
+        </div>
+    </div>
+</div>
 {% endblock %}
+
+
