--- a/JamminJobs/templates/jobs/single_job.html
+++ b/JamminJobs/templates/jobs/single_job.html
@@ -1,6 +1,6 @@
 <div class="well-job">
-    <a href="#">
-    <div class="big_job-card">
+    
+    <div class="big-job-card">
      <div class="job-details-big">
 	<div class="company-name">{{ job.title }}</div>
        <div class="location">
@@ -9,11 +9,13 @@
           <span class="location-text">{{ job.location }}</span>
        </div>
       </div>
+     <a href="#">
       <div class="apply">
-	      <h4>APPLY</h4>
+	      <h5>APPLY</h5>
       </div>
+     </a>
        <div class="job_description">{{ job.description }}</div>
      </div>
     <div class="job-card-divider"></div>
-    </a>
+    
 </div>
