deleted company login and signup, added user login functionality and changed the database

--- a/JamminJobs/templates/navigation.html
+++ b/JamminJobs/templates/navigation.html
@@ -22,7 +22,7 @@
                 </li>
             </ul> 
             <form class="top_buttons">
-                <a href="{% url 'companylogin' %}" class="btn btn-success">Company Log in</a>
+                <a href="{% url 'signup' %}" class="btn btn-success">Sign up</a>
             </form>
             <form class="top_buttons">
                 <a href="{% url 'login' %}" class="btn btn-success">Log In</a>
