--- a/JamminJobs/templates/login/signup_page.html
+++ b/JamminJobs/templates/login/signup_page.html
@@ -1,3 +1,5 @@
+{% extends "base.html" %} {% block title %} Sign Up {% endblock %}
+{% block content %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -58,3 +60,4 @@
     </div>
 </body>
 </html>
+{% endblock %}
