--- a/JamminJobs/templates/jobs/single_job.html
+++ b/JamminJobs/templates/jobs/single_job.html
@@ -4,7 +4,7 @@
      <div class="job-details-big">
 	<div class="company-name">{{ job.title }}</div>
        <div class="location">
-          <span class="company">{{ job.company }}</span>
+          <span class="company">{{ job.company.name }}</span>
            <div class="dot"></div>
           <span class="location-text">{{ job.location }}</span>
        </div>
@@ -14,7 +14,7 @@
 	      <h5>APPLY</h5>
       </div>
      </a>
-       <div class="job_description">{{ job.description }}</div>
+        <img src="{{ job.company.company_logo.url }}" alt="{{ job.company.name }} Logo">
      </div>
     <div class="job-card-divider"></div>
     
