--- a/JamminJobs/static/css/jobs.css
+++ b/JamminJobs/static/css/jobs.css
@@ -67,6 +67,31 @@ h5 {
 	background-color: #E4E4E4;
 }
 
+.job {
+	align-content: center;
+}
+
+img {
+	width: 90px;
+	height: auto;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+}
+
+@media (max-width: 788px){
+	img {
+		display: none;
+	}	
+}
+
+@media (min-width: 788.1) and (max-width: 1332) {
+	img {
+		width: 50px;
+		height: 50px;
+		border: solid red;
+	}
+}
 
 
 
