NWA finally finished their collection

--- a/JamminJobs/templates/companies/company.html
+++ b/JamminJobs/templates/companies/company.html
@@ -1,7 +1,12 @@
 {% extends "base.html" %} 
 {% block content %}
-    <h1 class="companies">Company collection</h1>
-    <div class="company">
+<head>
+  {% load static %}
+  <link rel="stylesheet" type="text/css" href='{% static '/css/companies.css' %}?{% now "U" %}'>
+</head>
+<div class="Landing-page">
+    <h1>Company collection</h1>
+    <div class="company-collection">
         {% for company in companies %}
             {% include 'companies/single_company.html' with company=company %}
         {% endfor %}
