--- a/JamminJobs/templates/companies/single_company.html
+++ b/JamminJobs/templates/companies/single_company.html
@@ -1,5 +1,7 @@
-<div class="well company">
-    <a href="#">
-        <h1>{{ company.name }}</h1>
-    </a>
+<div class="company-card">
+    <div class="photo-box">
+    </div>
+    <h5>{{ company.name }}</h5>
+    <p class="addy">{{ company.address }}</p>
+    <p class="para">{{ company.bio }}</p>
 </div>
