--- a/JamminJobs/templates/jobs/job.html
+++ b/JamminJobs/templates/jobs/job.html
@@ -71,9 +71,9 @@
 		    <input type="checkbox" id="Marketing" name="Marketing"> 
 		    Marketing 
 		</label>
-		<label for="Business"> 
-		    <input type="checkbox" id="Business" name="Business"> 
-		    Business 
+		<label for="Education"> 
+		    <input type="checkbox" id="Education" name="Education"> 
+		    Education 
 		</label>
 		<label for="Human-Resource"> 
 		    <input type="checkbox" id="Human-Resource" name="Human-Resource"> 
@@ -83,62 +83,16 @@
 		    <input type="checkbox" id="Finance" name="Finance"> 
 		    Finance 
 		</label>
-		<label for="Engineering"> 
-		    <input type="checkbox" id="Engineering" name="Engineering"> 
-		    Engineering 
+		<label for="Healthcare"> 
+		    <input type="checkbox" id="Healthcare" name="Healthcare"> 
+		    Healthcare 
 		</label>
 		<label for="Technology"> 
 		    <input type="checkbox" id="Technology" name="Technology"> 
 		    Technology 
 		</label>
 	    </form>
-        </div>
-        <div class="job-level">
-            <h4>Job Level</h4>
-	    <form>
-		<label for="Entry-Level"> 
-		    <input type="checkbox" id="Entry-Level" name="Entry-Level"> 
-		     Entry Level
-		</label>
-		<label for="Mid-Level"> 
-		    <input type="checkbox" id="Mid-Level" name="Mid-Level"> 
-		     Mid Level
-		</label>
-		<label for="Senior-Level"> 
-		    <input type="checkbox" id="Senior-Level" name="Senior-Level"> 
-		     Senior Level
-		</label>
-		<label for="Director"> 
-		    <input type="checkbox" id="Director" name="Director"> 
-		    Director
-		</label>
-		<label for="VIP-or-Above"> 
-		    <input type="checkbox" id="VIP-or-Above" name="VIP-or-Above"> 
-		     VIP or Above
-		</label>
-	    </form>
-        </div>
-        <div class="salary-range">
-            <h4>Salary Range</h4>
-	    <form>
-		<label for="700-1000"> 
-		    <input type="checkbox" id="700-1000" name="700-1000"> 
-		     $700 - $1000
-		</label>
-		<label for="1000-1500"> 
-		    <input type="checkbox" id="1000-1500" name="1000-1500"> 
-		     $1000 - $1500
-		</label>
-		<label for="1500-2000"> 
-		    <input type="checkbox" id="1500-2000" name="1500-2000"> 
-		    $1500 - $2000
-		</label>
-		<label for="3000-or-Above"> 
-		    <input type="checkbox" id="3000-or-Above" name="3000-or-Above"> 
-		     $3000 or Above
-		</label>
-	    </form>
-        </div>
+        </div >
     </div>
     <div class="job-list">
 	<div class="header-tag">
