--- a/JamminJobs/templates/base.html
+++ b/JamminJobs/templates/base.html
@@ -28,19 +28,19 @@
    <footer>
       <div class="footerContainer">
         <div class="socialIcons">
-            <a href=""><i class="fa-brands fa-facebook"></i></a> 
-            <a href=""><i class="fa-brands fa-instagram"></i></a> 
-            <a href=""><i class="fa-brands fa-twitter"></i></a> 
+            <a href="https://www.facebook.com"><i class="fa-brands fa-facebook"></i></a> 
+            <a href="https://www.instagram.com"><i class="fa-brands fa-instagram"></i></a> 
+            <a href="https://www.twitter.com"><i class="fa-brands fa-twitter"></i></a> 
         </div>
         <div class="footerNav">
           <ul> 
-            <li><a href="">About</a></li>
-            <li><a href="">Contact Us</a></li>
-            <li><a href="">Our Team</a></li>
+            <li><a href="https://en.wikipedia.org/wiki/Linus_Torvalds">About</a></li>
+            <li><a href="https://www.youtube.com/watch?v=xvFZjo5PgG0">Contact Us</a></li>
+            <li><a href="https://en.wikipedia.org/wiki/SEAL_Team_Six">Our Team</a></li>
           </ul>
         </div>
 	<div class="footerBottom">
-                <p> Copyright &copy;2024; Designed by <span class="designer">Kriswhyte, CrazyKobbi, BrekiBaseballBat</p>
+                <p> Copyright &copy;2024; Designed by <span class="designer">Breki Gunnarsson, Jakob Máni & Kristófer Orri</p>
 	</div>
       </div>
    </footer>
