--- a/JamminJobs/templates/navigation.html
+++ b/JamminJobs/templates/navigation.html
@@ -27,6 +27,9 @@
             <form class="top_buttons">
                 <a href="{% url 'login' %}" class="btn btn-success">Log In</a>
             </form>
+            <form class="top_buttons">
+                <a href="{% url 'profile' %}" class="btn btn-success">Profile</a>
+            </form>
         </div>
     </div>
 </nav>
