some js files bugging me so i took them out

--- a/JamminJobs/templates/profile/profile.html
+++ b/JamminJobs/templates/profile/profile.html
@@ -11,7 +11,7 @@
             <hr>
             <div class="image-setup">
                 <div class="profile-img">
-                <img src="/Images/profile.png" id="profile-pic">
+                <!-- <img src="/Images/profile.png" id="profile-pic"> -->
                 <label for="input-file" class="update-img">Update image</label>
                 <input type="file" accept="image/jpeg, image/png, image/jpg" id="input-file" class="input-img-button">
                 </div>   
@@ -85,7 +85,7 @@
         </div>
 
     </div>
-    <script src="educationModal.js"></script>
+    <!-- <script src="educationModal.js"></script>
     <script src="basicInfoModal.js"></script>
-    <script src="profilepic.js"></script>
+    <script src="profilepic.js"></script> -->
 {% endblock %}
