--- a/JamminJobs/static/css/companies.css
+++ b/JamminJobs/static/css/companies.css
@@ -29,11 +29,18 @@
 
 
 .photo-box {
-	margin-top: 12px;
-	border: solid 1px black;
-	height: 100px;
-	width: 120px;
+    display: flex;
+    margin-top: 12px;
+    height: 100px;
+    width: 120px;
 }
+
+.photo-box img {
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: contain; /* or 'cover' depending on how you want the images to fit */
+}
+
 
 
 .para {
@@ -46,3 +53,5 @@
 .addy {
 	font-size: 12px;
 }
+
+
