--- a/JamminJobs/templates/companies/company.html
+++ b/JamminJobs/templates/companies/company.html
@@ -3,7 +3,7 @@
 
 <head>
     {% load static %}
-    <link rel="stylesheet" type="text/css" href='{% static ' /css/companies.css' %}?{% now "U" %}'>
+    <link rel="stylesheet" type="text/css" href='{% static 'css/companies.css' %}?{% now "U" %}'>
 </head>
 <div class="Landing-page">
     <h1>Companies</h1>
