--- a/JamminJobs/templates/home/single_big_job_home.html
+++ b/JamminJobs/templates/home/single_big_job_home.html
@@ -2,7 +2,7 @@
      <div class="job-details-big">
 	<div class="company-name">{{ job.title }}</div>
        <div class="location">
-          <span class="company">{{ job.company }}</span>
+          <span class="company">{{ job.company.name }}</span>
            <div class="dot"></div>
           <span class="location-text">{{ job.location }}</span>
        </div>
