--- a/JamminJobs/templates/home/single_job_home.html
+++ b/JamminJobs/templates/home/single_job_home.html
@@ -7,7 +7,7 @@
           <div class="job-details">
 		  <div class="company-name">{{ job.title }}</div>
               <div class="location">
-                  <span class="company">{{ job.title }}</span>
+                <span class="company">{{ job.company.name }}</span>
                   <div class="dot"></div>
                   <span class="location-text">{{ job.location }}</span>
               </div>
