--- a/JamminJobs/templates/login/login_page.html
+++ b/JamminJobs/templates/login/login_page.html
@@ -1,7 +1,8 @@
 {% extends "base.html" %} {% block title %} Sign Up {% endblock %}
 {% block content %}
 <div class="login">
-    <form class="form-container">
+    <form class="form-container" method="POST" action="">
+	    {% csrf_token %}
         <section class="login-copy">
             <h2>Log In</h2>
             <div class="login-container">
@@ -9,13 +10,16 @@
             </div>
         </section>
         <div class="input-container name">
-            <label for="email">Email</label>
-            <input id="email" name="email" type="email" placeholder="Enter your email" required>
+            <label for="username1">Username</label>
+            <input id="username" name="username" type="username" placeholder="Enter your Username" required>
         </div>
         <div class="input-container name">
             <label for="password">Password</label>
-            <input id="password" name="password" type="password" placeholder="Enter your password" required>
+            <input id="password" name="password" type="password" placeholder="Enter your Password" required>
         </div>
+	{% for message in messages %}
+            <p id="mesg">{{message}}</p>
+	{% endfor %}
         <button class="login-btn" type="submit">Log in</button>
     </form>
 </div>
