--- a/JamminJobs/templates/login/signup_page.html
+++ b/JamminJobs/templates/login/signup_page.html
@@ -23,39 +23,9 @@
             </section>
         </div>
         <div class="right">
-            <form class="form-container" method="post" action="{% url 'signup' %}">
+            <form class="form-container" method="POST" action="{% url 'signup' %}">
                 {% csrf_token %}
-                <section class="copy">
-                    <p><b>Fill out the form below to register</b></p>
-                </section>
-                <div class="input-container name">
-                    <label for="name">Full Name</label>
-                    <input id="name" name="name" type="text" placeholder="Enter your full name" required>
-                </div>
-                <div class="input-container name">
-                    <label for="username">Username</label>
-                    <input id="username" name="username" type="text" placeholder="Enter your username" required>
-                </div>
-                <div class="input-container name">
-                    <label for="email">Email</label>
-                    <input id="email" name="email" type="email" placeholder="Enter your email" required>
-                </div>
-                <div class="input-container name">
-                    <label for="password1">Password</label>
-                    <input id="password1" name="password1" type="password" placeholder="Choose a password" required>
-                </div>
-                <div class="input-container name">
-                    <label for="password2">Confirm Password</label>
-                    <input id="password2" name="password2" type="password" placeholder="Confirm your password" required>
-                </div>
-                <div class="input-container name">
-                    <label for="birthdate">Birthdate</label>
-                    <input id="birthdate" name="birthdate" type="date" required>
-                </div>
-                <div class="input-container name">
-                    <label for="phone">Phone</label>
-                    <input id="phone" name="phone" type="tel" placeholder="Enter your phone number" required>
-                </div>
+		{{form.as_p}}
                 <button class="login-btn" type="submit">Sign Up</button>
             </form>
         </div>
